# agentic_rag_assistant

./: .gitignore  README.md  medical_database_schema.sql
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/.guardrails/: hub_registry.json
backend/app/: app.py
backend/app/auth/: security.py
backend/app/config/: config.py
backend/app/core/: limiter.py
backend/app/langfuse/: langfuse_client.py
backend/app/routes/: auth_routes.py  ingestion_routes.py  query_routes.py
backend/app/service/: agent.py  chunking.py  documents.py  indexing.py  llms.py  metadata.py  multimodal.py  pubmed_mcp_service.py  rate_limit.py  sql_bootstrap.py  structured_data_db.py  tools.py  vectordb.py
backend/app/service/guard/: guardrails_service.py  validatior_guard.py
backend/app/service/handoff/: __init__.py  handoff_service.py
backend/app/service/llamparse/: image_captioning.py  image_extraction.py  imageprocessing.py  table_extraction.py  tableprocessing.py  textprocessing.py
backend/app/service/mcp/: mcp_tools.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: StringData.ts  index.css  main.tsx  types.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx  RateLimitContext.tsx  token.ts
frontend/src/components/: ChatArea.tsx  ChatInput.tsx  EvalScorePanel.tsx  Markdown.tsx  Modal.tsx  RightPanel.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/config/: urls.ts
frontend/src/hooks/: useChat.ts  useUpload.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  SQLToolPage.tsx  VectorToolPage.tsx
(+5 files in other folders)
