[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index-core==0.12.52.post1",
    "llama-index-llms-azure-openai==0.3.4",
    "llama-index-embeddings-azure-openai==0.3.9",
    "llama-index-llms-openai-like==0.4.0",
    "llama-index-embeddings-openai-like==0.2.0",
    "llama-index-readers-database==0.4.0",
    "llama-index-vector-stores-postgres==0.5.5",
    "sqlalchemy==2.0.45",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.2",
    "llama-index-agent-openai==0.4.12",
    "fastapi==0.139.0",
    "uvicorn==0.49.0",
    "python-multipart==0.0.20",
    "pdfplumber==0.11.10",
    "python-docx==1.2.0",
    "pyjwt==2.13.0",
    "slowapi==0.1.10",
    "llama-parse==0.6.94",
    "pypdf==5.9.0",
    "docx2txt==0.9",
    "pymupdf==1.28.0",
    "llama-index-readers-file==0.4.11",
    "llama-index-retrievers-bm25==0.5.2",
    "pgvector==0.4.2",
    "presidio-analyzer==2.2.363",
    "presidio-anonymizer==2.2.363",
    "llama-index-tools-mcp==0.2.6",
    "mcp>=0.1.0",
    "langfuse==3.9.1",
    "openinference-instrumentation-llama-index==4.3.9",
    "ragas==0.4.3",
    "langchain-community==0.3.31",
    "guardrails-grhub-detect-pii",
    "guardrails-ai==0.10.2",
]

[[tool.uv.index]]
name = "guardrails"
url = "https://pypi.guardrailsai.com/simple"
explicit = true

[tool.uv.sources]
guardrails-grhub-detect-pii = { index = "guardrails" }
